# BeatHit

./: CMakeLists.txt  README.md
BeatHit/: BeatHit.cpp  BeatHit.h  CMakeLists.txt  GameScene.cpp
BeatHit/Kieling/: application.cpp  application.h  component.cpp  component.h  debug.cpp  debug.h  scene.cpp  scene.h  utils.cpp  utils.h
BeatHit/src/engine/: animation_player.cpp  animation_player.h  application.cpp  application.h  component.cpp  component.h  debug.cpp  debug.h  physicsComponent.h  physics_component.h  root.cpp  root.h  scene.cpp  scene.h  sprite.cpp  sprite.h  state.h  state_machine.h  utils.cpp  utils.h
BeatHit/src/scenes/: ball.cpp  game.cpp  player.cpp
